--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
-    <meta property="og:image" content="https://brakke.dev/favicon.png" />
+    <link rel="shortcut icon" href="/favicon.png" />
+    <meta property="og:image" content="%REACT_APP_URL%/image.jpg" />
+    <meta property="og:description" content="%REACT_APP_DESCRIPTION%" />
+    <meta property="og:title" content="%REACT_APP_TITLE%" />
+    <meta property="og:url" content="%REACT_APP_URL%" />
+    <meta property="og:type" content="application/index" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
@@ -13,7 +17,7 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="/manifest.json" />
     <link href="/fontawesome/css/fontawesome.css" rel="stylesheet">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -24,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Porte</title>
+    <title>%REACT_APP_TITLE%</title>
   </head>
   <body class="has-navbar-fixed-top">
     <noscript>You need to enable JavaScript to run this app.</noscript>
